[metadata]
name = ngram
version = 4.0.3
description = A `set` subclass providing fuzzy search based on N-grams.
long_description = file: README
long_description_content_type = text/x-rst
author = Graham Poulter, Michel Albert
maintainer = Graham Poulter
license = LGPL3
url = https://github.com/gpoulter/python-ngram
download_url = http://pypi.python.org/pypi/ngram
keywords = ngram set string text similarity
platforms = any
project_urls = 
    Documentation = https://python-ngram.readthedocs.io/en/latest/
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Natural Language :: English
    Topic :: Text Processing
    Topic :: Text Processing :: Indexing
    Topic :: Text Processing :: Linguistic
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[build_sphinx]
source-dir = docs
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[nosetests]
exe = 1

[options]
py_modules = 
    ngram
python_requires = >=3.0
scripts =
    scripts/csvjoin.py
